--- a/style-dictionary/tokens/components/button/buttonComposite.json5
+++ b/style-dictionary/tokens/components/button/buttonComposite.json5
@@ -395,16 +395,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -457,16 +457,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -519,16 +519,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.primary.disable.value}"
+                            "value": "{color.text.accent.disable.value}"
                         }
                     }
                 },
@@ -569,16 +569,16 @@
                 "color": {
                     "bg": {
                         "normal": {
-                            "value": "{color.bg.contrast.normal.value}"
+                            "value": "{color.bg.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.contrast.hover.value}"
+                            "value": "{color.bg.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.contrast.active.value}"
+                            "value": "{color.bg.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.bg.contrast.disable.value}"
+                            "value": "{color.bg.accent.disable.value}"
                         }
                     },
                     "text": {
@@ -631,16 +631,16 @@
                 "color": {
                     "bg": {
                         "normal": {
-                            "value": "{color.bg.contrast.normal.value}"
+                            "value": "{color.bg.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.contrast.hover.value}"
+                            "value": "{color.bg.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.contrast.active.value}"
+                            "value": "{color.bg.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.bg.contrast.disable.value}"
+                            "value": "{color.bg.accent.disable.value}"
                         }
                     },
                     "text": {
@@ -693,16 +693,16 @@
                 "color": {
                     "bg": {
                         "normal": {
-                            "value": "{color.bg.contrast.normal.value}"
+                            "value": "{color.bg.accent.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.contrast.hover.value}"
+                            "value": "{color.bg.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.contrast.active.value}"
+                            "value": "{color.bg.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.bg.contrast.disable.value}"
+                            "value": "{color.bg.accent.disable.value}"
                         }
                     },
                     "text": {
