--- a/style-dictionary/tokens/components/input/inputLabel.json5
+++ b/style-dictionary/tokens/components/input/inputLabel.json5
@@ -3,7 +3,7 @@
         "default":{
             "medium":{
                 "color":{
-                    "text":{
+                    "inputLabel":{
                         "normal":{
                             "value": "{color.text.secondary.default.value}"
                         },
