--- a/style-dictionary/tokens/components/button/buttonComposite.json5
+++ b/style-dictionary/tokens/components/button/buttonComposite.json5
@@ -384,10 +384,10 @@
                             "value": "{color.bg.transparent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.bg.primary.hover.value}"
+                            "value": "{color.bg.statusInfo.hover.value}"
                         },
                         "active": {
-                            "value": "{color.bg.primary.active.value}"
+                            "value": "{color.bg.statusInfo.active.value}"
                         },
                         "disable": {
                             "value": "{color.bg.transparent.default.value}"
@@ -395,13 +395,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.accent.disable.value}"
@@ -959,13 +959,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.default.value}"
+                            "value": "{color.text.link.normal.value}"
                         },
                         "hover": {
-                            "value": "{color.text.accent.hover.value}"
+                            "value": "{color.text.link.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.accent.active.value}"
+                            "value": "{color.text.link.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
